                            Changelog for EtherApe

  Overview of changes in EtherApe 0.9.20 ():


   Changes summary:
     * fix for ticket #100, thanks to Salam for reporting it.
     * diagram refresh command, thanks to Ronald Henderson
     * patch to remove artifact when resizing, thanks to Ronald Henderson

  Overview of changes in EtherApe 0.9.19 (Friday, May 15, 2020):

   This is primarily a bugfix release, but thanks to AlexL adds also a Russian
   translation.

   Changes summary:
     * better sizing of connections lines, thanks to Ronald Henderson.
     * fix for ui crash by "MandatoryField"
     * fix a crash happening when the capture process wasn't able to set the filter. 
       Thanks to Benjamin Woods for providing a vital backtrace.
     * russian translation and fixes by AlexL
     * fix for debian bug #958408 from Bernhard Übelacker
       Thanks from Patrick Matthäi for sending the patch upstream

  Overview of changes in EtherApe 0.9.18 (Sunday, June 3, 2018):

   EtherApe now is a pure GTK 3 application, with canvas supplied by GooCanvas
   (https://wiki.gnome.org/Projects/GooCanvas).

   While GooCanvas itself is in maintenance mode, is still the simpler canvas
   library available and with an API almost identical to gnome-canvas, too!
   Longer term, EtherApe ui should be completely redesigned and modernized,
   but this is for another day.

   Changes summary:
     * EtherApe ported to GTK3 using GooCanvas instead of the obsolete
       GnomeCanvas. 


  Overview of changes in EtherApe 0.9.17 (Thursday, April 5, 2018):

   This is a bugfix release, because a bug made 0.9.16 still runtime-dependent
   on gnomeui and other gnome 2 libraries.
 
   Changes summary:
     * EtherApe now requires Gtk 2.24
     
     * fixed a bug making libglade load gnome2 libraries
     
     * Sometimes node/links windows were freezing.


  Overview of changes in EtherApe 0.9.16 (Sunday, January 14, 2018):
