@@ -1646,7 +1646,7 @@ Conversely, --min-delay can help analyze many short lived connections.</para>
             &lt;/stats&gt;
             &lt;name&gt;
               &lt;id&gt;
-                &lt;link&gt;fe:ff:20:00:01:00&lt;/link&gt;
+                &lt;link-id&gt;fe:ff:20:00:01:00&lt;/link-id&gt;
               &lt;/id&gt;
               &lt;numeric_name&gt;fe:ff:20:00:01:00&lt;/numeric_name&gt;
               &lt;accumulated&gt;14049&lt;/accumulated&gt;
@@ -1713,7 +1713,7 @@ Conversely, --min-delay can help analyze many short lived connections.</para>
 <para>Lines 10-16 contain the primary node identifier, i.e. the name/address displayed by &app;. In this example is the IPv4 address 10.0.0.4, along its resolved name.</para>
 <para>While only one &lt;name&gt; can be displayed, a node usually has multiple identities: an Ethernet MAC address, an IP one, perhaps a NETBIOS name. Every identity has a matching &lt;name&gt; element; see lines 57-63 and 74-82.</para>
 <para>A &lt;name&gt; is identified by its &lt;id&gt; i.e. its address, which
-  can be of type IP (an IPv4 dotted decimal address), IPv6 or 'link', a
+  can be of type IP (an IPv4 dotted decimal address), IPv6 or 'link-id', a
   link-level, colon separated, list of octets (e.g. the Ethernet MAC address). You see an example of the latter in lines 58-60.</para>
 <para>&lt;numeric_name&gt; and &lt;resolved_name&gt; are the high level equivalent of &lt;id&gt;; &lt;accumulated&gt; is the total bytes of traffic related with the name. &app; uses this statistic to choose between multiple names.
 </para>
