@@ -29,6 +29,7 @@
 #include <locale.h>
 
 #include "stats/node.h"
+#include "stats/links.h"
 #include "stats/util.h"
 #include "export.h"
 
@@ -62,6 +63,7 @@ gchar *generate_xml(unsigned long totpkts)
 {
   gchar *xmlh;
   gchar *xmln;
+  gchar *xmll;
   gchar *xmlp;
   gchar *xml;
   gchar *oldlocale;
@@ -72,17 +74,20 @@ gchar *generate_xml(unsigned long totpkts)
 
   xmlh = header_xml(totpkts);
   xmln = nodes_catalog_xml();
+  xmll = links_catalog_xml();
   xmlp = protocol_summary_xml();
   xml = g_strdup_printf("<?xml version=\"1.0\"?>\n"
                         "<!-- traffic data in bytes. last_heard in seconds from dump time -->\n"
-                        "<etherape>\n%s%s%s</etherape>",
+                        "<etherape>\n%s%s%s%s</etherape>",
                         xmlh,
                         xmln,
+                        xmll,
                         xmlp);
   // reset user locale
   setlocale(LC_ALL, oldlocale);
 
   g_free(xmlp);
+  g_free(xmll);
   g_free(xmln);
   g_free(xmlh);
   g_free(oldlocale);
