@@ -33,7 +33,6 @@ typedef struct
 node_t *node_create(const node_id_t *node_id); /* creates a new node */
 void node_delete(node_t *node); /* destroys a node, releasing memory */
 gchar *node_dump(const node_t *node);
-gchar *node_xml(const node_t *node);
 gint node_count(void); /* total number of nodes in memory */
 
 /* methods to handle every new node not yet handled in the main app */
