@@ -2,11 +2,21 @@
 
   Overview of changes in EtherApe 0.9.20 ():
 
+   Several changes to improve xml output. Now dumps also links and global 
+   protocol statistics.
+   Compatibility Warning: the link-level xml element is now called 'link-id', instead of 
+   simply 'link' as in the past releases. 'link' xml elements now refer to node-to-node 
+   statistics.
 
    Changes summary:
      * fix for ticket #100, thanks to Salam for reporting it.
      * diagram refresh command, thanks to Ronald Henderson
      * patch to remove artifact when resizing, thanks to Ronald Henderson
+     * improve statistics repeatability esp. when setting max-delay=0 (useful for tests
+       or just to calcolate quickly statistics of a dump file).
+     * new no-display mode (command line only), disables diagram updates (again, mostly
+       for testing).
+
 
   Overview of changes in EtherApe 0.9.19 (Friday, May 15, 2020):
 
